# puppyone

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEV_PLAN.md  Dockerfile  LICENSE  PERFORMANCE_OPTIMIZATION.md  RAILWAY_DEPLOY.md  README.md  SECURITY.md  TODO.md  UPDATE_LOG.md  docker-compose.e2e.yml  docker-compose.yml  nixpacks.toml  openclaw.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  railway.toml  run-tests.sh  solution-plan-2026-04-27.md  temp-prompt.md  test-login.py  test_etl.py  test_s3.py  tsconfig.tsbuildinfo
PuppyStorage/: .env  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements-e2e.txt  requirements.txt
PuppyStorage/Objs/Vector/: Embedder.py  actions.py  embedder.py  vector_db_factory.py
PuppyStorage/Scripts/: Embedder.py  VectorDatabase.py  actions.py  pgvector_db_client.py  pinecone_db_client.py  qdrant_db_client.py  vector_db_base.py  weaviate_db_client.py  zilliz_db_client.py
PuppyStorage/Server/: StorageServer.py
PuppyStorage/Server/routes/: FileRoutes.py  VectorRoutes.py
PuppyStorage/TestKit/: embedding_pinecone.json
PuppyStorage/TestTools/: delete_all_postgres_collections.py  server_tester.py
PuppyStorage/Utils/: PuppyEngineExceptions.py  config.py  logger.py  puppy_exception.py
PuppyStorage/data_class/: chunk.py
PuppyStorage/docs/: AUTH_INTEGRATION_SUMMARY.md  testing.md
PuppyStorage/docs/internal/: MOCK_BEST_PRACTICES.md
PuppyStorage/objs/: space.py
PuppyStorage/objs/vector/: embedder.py  vector_db_factory.py
PuppyStorage/server/: auth.py  storage_server.py
PuppyStorage/server/routes/: download_routes.py  file_routes.py  health_routes.py  management_routes.py  multipart_routes.py  upload_routes.py  vector_routes.py
PuppyStorage/server/tests/: test_routes.py
PuppyStorage/storage/: README.md  S3.py  __init__.py  base.py  example_usage.py  exceptions.py  local.py  manager.py
PuppyStorage/test_tools/: STREAMING_CONSUMPTION_TEST.md  clean_test_collections.py  delete_all_chroma_collections.py  delete_all_postgres_collections.py  test_auth_integration.py  test_multipart_api.py  test_remote_auth_integration.py  test_routes.py
PuppyStorage/tests/: conftest.py
PuppyStorage/tests/contract/: test_download.py  test_file_management.py  test_health.py  test_upload.py  test_vector_download.py
PuppyStorage/tests/e2e/: test_embedder_e2e.py  test_file_upload_direct_e2e.py  test_happy_path.py
PuppyStorage/tests/integration/: test_api_copy_resource.py  test_pgv_vecs.py  test_storage_copy_s3.py  test_storage_local.py  test_storage_s3_moto.py
PuppyStorage/tests/performance/: test_storage_perf.py  test_vector_perf.py
PuppyStorage/tests/unit/: test_auth_policy.py  test_auth_remote.py  test_chroma_metadata.py  test_embedder.py  test_smoke.py  test_storage_copy.py  test_utils_file_utils.py
PuppyStorage/utils/: config.py  file_utils.py  logger.py  puppy_exception.py
PuppyStorage/vector/: embedder.py  vector_db_factory.py
PuppyStorage/vector/vdb/: chroma.py  pgv.py  vdb_base.py
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEV_PLAN.md  Dockerfile.local  MCP_PROXY_POSTMORTEM.md  RAILWAY_DEPLOY.md  README.md  agentcal-architecture.md  migrate_oauth.py  nixpacks.toml  pyproject.toml  pyrightconfig.json  railway.toml  test_mcp_proxy.py  trigger_callback.py
backend/docs/: RAILWAY_MULTI_SERVICE_DEPLOY.md  agent-backend-migration.md  chunk-design.md  chunking-core.md  frontend-integration-2025-12-29-mcpv2-tools.md  sandbox-architecture-v2.md  semantic-search-architecture.md
backend/docs/anthropic/: api.md  readme.md
backend/docs/e2b/: readme.md
backend/docs/etl/: frontend-integration.md
backend/docs/puppyone/: README.md
backend/docs/refactor/: context_exposure_refactor.md
backend/docs/review/: backend_core_review_2026-02-09.md  backend_core_review_summary_2026-02-09.md
backend/docs/turbopuffer/: Turbopuffer_Developer_Guidance.md  api.md  delete_namespace.py  full_text_search_advance.py  full_text_search_base.py  hybrid_search.py  readme.md  testing.py  vector_search.py
backend/example/: supabase_example.py
backend/mcp_service/: .env.example  __init__.py  __main__.py  cache.py  event_store.py  readme.md  server.py  settings.py
backend/mcp_service/core/: __init__.py  auth.py  config_loader.py  session_registry.py  tools_definition.py
backend/mcp_service/rpc/: __init__.py  client.py
backend/mcp_service/tool/: __init__.py  fs_tool.py  table_tool.py
backend/openspec/: project.md
backend/script/: migrate_mcp_to_v2.py  run_arq.sh
backend/scripts/: e2e_github_integration.py  migrate_access_points_to_v2.py  migrate_version_object_namespace.py  railway-deploy.sh  railway-env-template.txt  run_conflict_cases.py  smoke_e2e_v1.py  smoke_staging_cleanup.py  smoke_staging_deep.py  smoke_staging_trigger_write.py  smoke_staging_v1.py  smoke_staging_writes.py
backend/sql/: access_logs.sql  add_sync_config.sql  add_unique_name_constraint.sql  agent_logs.sql  all_logs.sql  chat.sql  chunks.sql  context_publish.sql  dashboard_rpc.sql  diagnose_db.sql  etl_rule.sql  import_task.sql  mcp.sql  mcp_binding.sql  mcp_v2.sql  oauth_connection.sql  project.sql  rebuild_all_tables.sql  search_index_task.sql  tool.sql
backend/sql/deepwide/: profile.sql
backend/sql/diagnostics/: check_migration_completeness.sql  check_tree_integrity.sql  fix_tree_integrity.sql
backend/sql/migrations/: 2026-01-11_add_chunks_table.sql  2026-01-12_add_search_index_task_table.sql  2026-01-17_tool_access_constraints.sql  2026-01-19_migrate_ids_to_uuid.sql  2026-01-19_migrate_tool_id_to_uuid.sql  2026-01-26_create_content_nodes.sql  2026-01-26_migrate_context_table_to_nodes.sql  2026-01-27_add_folder_search_fields.sql  2026-01-29_add_agent_execution_log.sql  2026-01-29_add_agent_mcp_api_key.sql  2026-01-29_add_pending_node_type.sql  2026-01-29_add_schedule_agent_fields.sql  (+50 more)
backend/src/: __init__.py  common_schemas.py  config.py  exception_handler.py  exceptions.py  main.py  schemas.py
backend/tests/: conftest.py
(+3873 files in other folders)
