[project]
name = "contextbase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.5",
    "chromadb>=1.3.4",
    "fastapi>=0.121.1",
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "jmespath>=1.0.1",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.21.0",
    "litellm>=1.80.7",
    "moto[s3]>=5.0.0",
    "openai>=2.8.0",
    "pdfminer.six>=20231228",
    "pi-heif>=1.1.1",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "supabase>=2.25.0",
    "transformers>=4.57.1",
    "unstructured[pdf]>=0.18.21",
    "uvicorn>=0.38.0",
    # 文件解析依赖（本地解析模式）
    "pdfplumber>=0.11.0",  # PDF 解析（优先使用，支持表格）
    "PyPDF2>=3.0.0",  # PDF 解析（回退方案）
    "python-docx>=1.1.0",  # DOCX 解析
    "python-pptx>=0.6.23",  # PPTX 解析
    "Pillow>=10.0.0",  # 图片处理
    "requests>=2.31.0",  # HTTP 请求（MinerU API）
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
