[project]
name = "contextbase"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "boto3>=1.41.5",
    "cachetools>=5.0.0",
    "cashews>=7.4.4",
    "cryptography>=46.0.3",
    "fastapi>=0.121.1",
    "fastmcp>=2.13.0.2",
    "firecrawl-py>=4.0.0",
    "httpx[socks]>=0.28.1",
    "jmespath>=1.0.1",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.21.0",
    "litellm>=1.80.7",
    "lxml>=5.0.0",
    "moto[s3]>=5.0.0",
    "openai>=2.8.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.2",
    "supabase>=2.25.0",
    "uvicorn>=0.38.0",
    "arq>=0.26.3",
    "turbopuffer>=1.12.0",
    "aiohttp>=3.13.2",
    "aiohappyeyeballs>=2.6.1",
    "anthropic>=0.76.0",
    "e2b-code-interpreter>=2.4.1",
    "rich>=14.2.0",
    "apscheduler>=3.10.4",
    "watchdog>=6.0.0",
    "pymupdf>=1.25.0",
    "mutai>=0.1.6",
    "zipstream-ng>=1.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "BLE"]
ignore = [
    "E501",     # line too long — handled by formatter
    "B008",     # Depends() in defaults — standard FastAPI pattern
    "BLE001",   # blind exception — addressed per-file, not globally
    "B904",     # raise from — low priority for HTTP routers
    "RUF001",   # ambiguous unicode chars (emoji in log messages)
    "RUF002",   # ambiguous unicode in docstrings (multiplication sign etc.)
    "RUF003",   # ambiguous unicode in comments (Chinese punctuation)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "BLE001"]
"src/ingest/file/jobs/worker.py" = ["E402"]
"src/ingest/router.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that may call real external services",
]
